# Claude-desing

./: .editorconfig  .gitignore  AGENTS.md  README_00_OVERVIEW.md  README_01_ARBORESCENCE.md  README_03_UTILITE_PAR_PARTIE.md  SECURITY_HARDENING.md  doawnload.py  index.html
.MD/: CONTRIBUTING.md  GPT.md  README_00_OVERVIEW.md  README_02_FONCTIONNEMENT.md  SECURITY_HARDENING.md  SECURITY_VALIDATION_PLAYBOOK.md  THIRD_PARTY_LICENSES.md  supp-memorie.txt
.github/: CODEOWNERS.sample
AGENTS/: AGENTS.md  memory.md
TODO/: ACCES_JETSON_REQUIS.md  AUDIT_ECONOMIQUE.md  AUDIT_REPORT.md  Faille_01_RPMB_absent_rollback_TEE.md  Faille_02_OPTEE_bootstrap_TOFU.md  Faille_03_TLS_fallback_clair.md  Faille_04_AES_GCM_nonce_reuse.md  Faille_05_HKDF_HMAC_SHA3_maison.md  Faille_06_TA_sealing_AES_GCM_sans_AAD.md  Faille_07_pas_de_separation_sender_receiver.md  Faille_08_anti_replay_apres_decryption.md  Faille_09_decrypt_resize_non_borne.md  Faille_10_demo_keys_embarquees.md  Faille_11_TA_wipe_key_internal_bug.md  Faille_12_TA_attest_P256_non_HW_bound.md  Faille_13_TA_recovery_nonce_replay.md  Faille_14_TA_maintenance_cmds_sans_signature.md  Faille_15_TA_sign_attest_digest_accepte_court.md  Faille_16_server_accept_loop_DoS.md  Faille_17_KDF_SP800_108_separateur_ambigu.md  Faille_18_server_allowlist_revoke_sans_signature.md  Faille_19_server_frames_world_readable.md  Faille_20_HESIA_FORENSIC_env_bypass.md  Faille_21_server_rotate_all_keys_shell_injection.md  Faille_22_server_UI_non_authentifiee.md  Faille_23_video_source_path_traversal.md  Faille_24_secrets_non_zeroises_RAM.md  Faille_25_cle_SSH_privee_sur_disque.md  Faille_GROUPE_P2_hygiene_hardening.md  Faille_GROUPE_P3_observations_mineures.md  README.md  VERIFICATION_REPORT.md
docs/: HESIA_ALPHA_ARCHITECTURE_2026-05-09.md  HESIA_COMPLETE_REFERENCE_EN.docx  HESIA_COMPLETE_REFERENCE_EN.md  HESIA_COMPLETE_REFERENCE_FR.docx  HESIA_COMPLETE_REFERENCE_FR.md  HESIA_CORELIB_EN.md  HESIA_CORELIB_FR.md  HESIA_ENGINEERING_MANUAL.md  HESIA_INSTALLATION_GUIDE.md  HESIA_JETSON_BASELINE_2026-04-20.md  HESIA_JETSON_TRANSPORT_SOAK_2026-04-23.md  HESIA_LOCAL_SERVER_DRONE_SPLIT_AUDIT_2026-04-26.md  HESIA_M2B_JETSON_BENCHMARK_2026-04-21.md  HESIA_M2B_VISUALIZER.md  HESIA_MAINTENANCE_MATRIX.md  HESIA_MISSION_MODEL.md  HESIA_OPERATIONS_RUNBOOK.md  HESIA_SECURITY_REMEDIATION_2026-04-24.md  HESIA_TA_OPTEE_REFERENCE.md  README.md  UTILISATION.md
drone_source/: CMakeLists.txt  README.md  buffer_manager.hpp  buffer_pool.hpp  buffer_wrapper.hpp  cfi_protection.cpp  cfi_protection.hpp  clean_pipeline.cpp  clean_pipeline.hpp  clock_attack_protection.cpp  clock_attack_protection.hpp  config.cpp  config.hpp  crypto_real.cpp  crypto_real.hpp  drone_network.cpp  drone_network.hpp  em_attack_protection.cpp  em_attack_protection.hpp  error_handler.cpp  error_handler.hpp  exceptions.hpp  fault_injection_protection.cpp  fault_injection_protection.hpp  fips_common.hpp  fips_module.cpp  fips_module.hpp  fips_selftest.cpp  fips_selftest.hpp  fuzzing_framework.cpp  fuzzing_framework.hpp  hardware_monitor.cpp  hardware_monitor.hpp  hesia_drone.cpp  hesia_drone.hpp  hesia_drone_secured.hpp  kdf_sp800_108.cpp  kdf_sp800_108.hpp  logger.cpp  logger.hpp  (+55 more)
drone_source/Sentinel/: AGENT.md  README.md  hesia-sentinel_api.adb  hesia-sentinel_api.ads  hesia-sentinel_config.adb  hesia-sentinel_config.ads  hesia-sentinel_core.adb  hesia-sentinel_core.ads  hesia-sentinel_hash.adb  hesia-sentinel_hash.ads  hesia-sentinel_hw.adb  hesia-sentinel_hw.ads  hesia-sentinel_kernel.adb  hesia-sentinel_util.adb  hesia-sentinel_util.ads  hesia_sentinel.gpr
drone_source/tools/: README.md  hesia-policy-ed25519-embed.sh  hesia-policy-pqc  hesia-policy-pqc.cpp  hesia-policy-pqc.sh
drone_transition_source/: README.md  README_SIGS.md  allowlist.conf  allowlist.sig  allowlist_pub.pem
marketing/: 00_ETUDE_DE_MARCHE.md  01_PLAN_MARKETING_STRATEGIQUE.md  02_BRAND_IDENTITY.md  04_SOCIAL_MEDIA.md  05_CAMPAGNES_PUBLICITAIRES.md  06_CONTENT_MARKETING.md  07_SALES_FUNNEL.md  08_KPI_DASHBOARD.md  09_BUDGET_ROADMAP.md  10_RELATIONS_PRESSE.md  README.md
ml/: README.md  __init__.py
papers/: HESIA_ALPHA_ARCHITECTURE_MULTIMODALE_EMBARQUEE_FR.md  HESIA_ALPHA_EMBEDDED_MULTIMODAL_ARCHITECTURE_EN.md  HESIA_M2B_EMBEDDED_MULTIMODAL_POLICY_REPORT_2026-04-20.md
security/: allowed-binaries.txt  approved-dependencies.txt
server_source/: CMakeLists.txt  README.md  README.txt  README_UI.md
server_source/build-local/: CMakeCache.txt  Makefile  cmake_install.cmake  hesia_server_cpp
server_source/build-local/debug/: hesia_server_cpp.debug
server_source/include/: hesia_server_session.hpp  net_framing.hpp  policy.hpp  security_audit.hpp  server_state.hpp  telemetry_parser.hpp  tls_utils.hpp
server_source/keys/: README_KEYS.md  ca.crt  demo_public.pem  drone.crt  firmware_allowlist.txt  san.cnf  server.crt  tls_ca.crt  tls_server.crt  tls_server.csr
server_source/src/: hesia_server_session.cpp  main.cpp  net_framing.cpp  policy.cpp  policy_ed25519_public_key.cpp  security_audit.cpp  telemetry_parser.cpp  tls_utils.cpp
server_source/tools/: bench_tls.sh  gen_mtls_bundle.sh  gen_tls_ca.sh  gen_tls_cert.sh  rotate_all_keys.sh  soak_watch.sh  ui_app.py  ui_server.py
server_source/ui/: app.js  index.html  styles.css
tests/fuzz/: CMakeLists.txt  fuzz_serialization.cpp  fuzz_telemetry.cpp  fuzz_video_packet.cpp
tests/unit/: CMakeLists.txt  test_secure_channel.cpp  test_support_stubs.cpp
tools/: _tmp_build_local_liboqs.sh  _tmp_fix_sentinel_remote.sh  _tmp_jetson_redeploy.sh  _tmp_jetson_restore_run.sh  _tmp_policy_pub_bytes.txt  _tmp_start_ui.sh  analyze_jetson_transport_artifact.py  build_hesia_cloaked_release.sh  build_repro_drone.sh  build_repro_targets.sh  check_declared_dependencies.py  check_doc_links.py  check_doc_links.sh  check_opaque_binaries.py  check_versioned_private_keys.py  deploy_hesia_release.sh  fuzz_plfm_bridge_io.py  generate_beta_airframe.py  generate_epsilon_nsi_pdfs.py  generate_firmware_sbom.py  generate_optee_recovery_token.py  hale_blender_render.py  hale_convert_stl_to_obj.py  jetson_scp.sh  (+21 more)
(+70 files in other folders)
